--- a/iecisa-scan-applet/pom.xml
+++ b/iecisa-scan-applet/pom.xml
@@ -5,14 +5,14 @@
 
     <modelVersion>4.0.0</modelVersion>
     <parent>
-         <groupId>org.fundaciobit.plugins</groupId>
-         <artifactId>plugin-scanweb-iecisascanweb</artifactId>
-        <version>1.0.0</version>
+        <artifactId>pluginsib-scanweb</artifactId>
+        <version>3.0.0</version>        
+        <name>PluginsIB - Scan Web Plugins</name>
     </parent>
-    <name>FundacioBit Plugins - Scan Web - IECISA - Applet</name>
+    <name>PluginsIB - Scan Web Plugins - IECISA - Applet</name>
     <groupId>org.fundaciobit.plugins</groupId>
     <artifactId>plugin-scanweb-iecisascanweb-applet</artifactId>
-    <version>2.0.0</version>
+    <version>3.0.0</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <afirma.keytool.keystore>afirma.keystore</afirma.keytool.keystore>
