--- a/scanweb-tester/scanweb-ejb/pom.xml
+++ b/scanweb-tester/scanweb-ejb/pom.xml
@@ -3,6 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.fundaciobit.pluginsib.scanweb</groupId>
   <artifactId>pluginsib-scanweb-tester-ejb</artifactId>
+  <version>3.0.0</version>
   <packaging>ejb</packaging>
   <name>PluginsIB - Scan Web - Tester - EJB</name>
   <parent>
