--- a/iecisa-scan-applet/pom.xml
+++ b/iecisa-scan-applet/pom.xml
@@ -5,14 +5,14 @@
 
     <modelVersion>4.0.0</modelVersion>
     <parent>
+        <groupId>org.fundaciobit.pluginsib.scanweb</groupId>
         <artifactId>pluginsib-scanweb</artifactId>
-        <version>3.0.0</version>        
-        <name>PluginsIB - Scan Web Plugins</name>
+        <version>3.0.0</version>
     </parent>
     <name>PluginsIB - Scan Web Plugins - IECISA - Applet</name>
-    <groupId>org.fundaciobit.plugins</groupId>
-    <artifactId>plugin-scanweb-iecisascanweb-applet</artifactId>
-    <version>3.0.0</version>
+    <groupId>org.fundaciobit.pluginsib.scanweb</groupId>
+    <artifactId>pluginsib-scanweb-iecisascanweb-applet</artifactId>
+    <version>3.0.1</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <afirma.keytool.keystore>afirma.keystore</afirma.keytool.keystore>
