IECISASCANWEB: Ometre format de retorn del Perfil (https://github.com/GovernIB/pluginsib-scanweb/issues/8)

--- a/iecisa-scanweb-plugin/src/main/resources/iecisascanweb.properties
+++ b/iecisa-scanweb-plugin/src/main/resources/iecisascanweb.properties
@@ -1,4 +1,5 @@
 
+error.format=El format del fitxer rebut no és l´esperat. Revisi el Perfil de l´escaner i seleccioni el format {0}.
 error.nofinestra=ERROR: NO es pot mostrar l´utilitat d´escaneig en una finestra
 esperantservidor=Esperant a l´enviament de documents al servidor ...
 final=Continuar >>
