--- a/dynamicwebtwain/src/main/resources/dynamicwebtwain.properties
+++ b/dynamicwebtwain/src/main/resources/dynamicwebtwain.properties
@@ -1,16 +1,17 @@
 dwt.dispositiu=Dispositiu
+dwt.safata=Safata entrada document
 dwt.error.validacio=Hi ha errors en el formulari. Revisau-los abans de enviar.
 dwt.color=Color
 dwt.resolucio=Resolució
 dwt.duplex=Duplex
-dwt.borra.actual=Borra actual
-dwt.borra.tot=Borra tot
+dwt.borra.actual=Esborra actual
+dwt.borra.tot=Esborra tot
 dwt.error.upload=S\\'ha produ\u00EFt un error, i no s\\'ha pogut pujar el document escanejat.
 
 
 docspujats=Documents pujats
 esperantservidor=Esperant a l´enviament de documents al servidor ...
-final=Continuar &gt;&gt;
+final=Continuar >>
 llistatescanejats=Llistat de Documents Escanejats
 noenviats=No s´ha enviat cap document escanejat al servidor. Vol sortir?
 pitja=Pitja per Escanejar
