--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <module>iecisa-scanweb-plugin</module>
     <module>caib-scanweb-plugin</module>
     <module>filescan-plugin</module>
+    <module>digitalib-plugin</module>
     <module>scanweb-tester</module>
   </modules>
   <dependencies>
