Errors en Plugins quan es fa escaneig en Mode Asincron #10

--- a/dynamicwebtwain/src/main/resources/dynamicwebtwain.properties
+++ b/dynamicwebtwain/src/main/resources/dynamicwebtwain.properties
@@ -12,8 +12,10 @@ dwt.error.upload=S\\'ha produ\u00EFt un error, i no s\\'ha pogut pujar el docume
 docspujats=Documents pujats
 esperantservidor=Esperant a l´enviament de documents al servidor ...
 final=Continuar >>
+finalproces=Final del procés d´escaneig
 llistatescanejats=Llistat de Documents Escanejats
 noenviats=No s´ha enviat cap document escanejat al servidor. Vol sortir?
+noenviats.error=No s´ha enviat cap document escanejat al servidor
 pitja=Pitja per Escanejar
 pujarServidor=Pujar al servidor
 rebut.1.fitxer=Rebut <b>{0}</b> fitxer
