--- a/filescan-plugin/src/main/resources/filescanweb.properties
+++ b/filescan-plugin/src/main/resources/filescanweb.properties
@@ -2,3 +2,6 @@
 selectfile=Seleccioni un fitxer
 cancelar=Cancel·lar
 acceptar=Acceptar
+
+final=Ha finalitzat l´escaneig correctament
+cancelat=El procés d´escaneig s´ha cancel·lat
