--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,9 @@
 /iecisa-scan-applet/.gitignore
 /iecisa-scan-applet/.project
 /iecisa-scan-applet/afirma.keystore_old
+/digitalib-plugin/.classpath
+/digitalib-plugin/.gitignore
+/digitalib-plugin/.project
+/digitalib-plugin/.settings/org.eclipse.core.resources.prefs
+/digitalib-plugin/.settings/org.eclipse.jdt.core.prefs
+/digitalib-plugin/.settings/org.eclipse.m2e.core.prefs
