Retornar les dades omplides al formulari en REST https://github.com/GovernIB/digitalib/issues/96

--- a/digitalib-plugin/plugin.properties
+++ b/digitalib-plugin/plugin.properties
@@ -1,6 +1,13 @@
+
+# BASE = es.caib.regweb3.scan.plugin.4.
+
 es.caib.regweb3.scan.plugin.4=org.fundaciobit.plugins.scanweb.digitalib.DigitalIBScanWebPlugin
 es.caib.regweb3.scan.plugin.4.plugins.scanweb.digitalib.url=http://digitalib.fundaciobit.org/digitalib/common/rest/apiscanwebsimple/v1/
-es.caib.regweb3.scan.plugin.4.plugins.scanweb.digitalib.username=regweb
-es.caib.regweb3.scan.plugin.4.plugins.scanweb.digitalib.password=regweb
-es.caib.regweb3.scan.plugin.4.plugins.scanweb.digitalib.profile=PERFIL_SCAN_JNLP_OR_FILE
+es.caib.regweb3.scan.plugin.4.plugins.scanweb.digitalib.username=username
+es.caib.regweb3.scan.plugin.4.plugins.scanweb.digitalib.password=password
+
 # Optional
+
+# Si no es defineix el profile, llavors se li mostrarà una pantalla a l'usuari amb tots els
+# Perfils disponibles per aquell usuari aplicació
+#es.caib.regweb3.scan.plugin.4.plugins.scanweb.digitalib.profile=PERFIL_SCAN_JNLP_OR_FILE
