--- a/digitalib-plugin/src/main/resources/digitalibscanweb.properties
+++ b/digitalib-plugin/src/main/resources/digitalibscanweb.properties
@@ -1,4 +1,8 @@
-selectfile=Seleccioni un fitxer
+
 cancelar=Cancel·lar
 acceptar=Acceptar
 finalproces=Final del procés d´escaneig
+
+
+plugindescan.seleccio.title=Selecció del Perfil d´Escaneig 
+plugindescan.seleccio.subtitle=Seleccioni el perfil d´escaneig que vol realitzar
