Retornar les dades omplides al formulari en REST https://github.com/GovernIB/digitalib/issues/96

--- a/scanweb-tester/plugins.properties
+++ b/scanweb-tester/plugins.properties
@@ -79,7 +79,12 @@ org.fundaciobit.scanweb.tester.scanwebplugins.4.desc=DigitalIB
 org.fundaciobit.scanweb.tester.scanwebplugins.4.pluginsib.scanweb.digitalib.url=http://digitalib.fundaciobit.org/digitalib/common/rest/apiscanwebsimple/v1/
 org.fundaciobit.scanweb.tester.scanwebplugins.4.pluginsib.scanweb.digitalib.username=username
 org.fundaciobit.scanweb.tester.scanwebplugins.4.pluginsib.scanweb.digitalib.password=password
-org.fundaciobit.scanweb.tester.scanwebplugins.4.pluginsib.scanweb.digitalib.profile=PERFIL_SCAN_JNLP_OR_FILE
+
+#Opcional
+
+# Si no es defineix el profile, llavors se li mostrarà una pantalla a l'usuari amb tots els
+# Perfils disponibles per aquell usuari aplicació
+#org.fundaciobit.scanweb.tester.scanwebplugins.4.pluginsib.scanweb.digitalib.profile=PERFIL_SCAN_JNLP_OR_FILE
 
 
 #----------------------------------------------
