Plugin de DigitalIB: Recollir les dades del funcionari a traves de les metadades #11

--- a/digitalib-plugin/plugin.properties
+++ b/digitalib-plugin/plugin.properties
@@ -2,11 +2,15 @@
 # BASE = es.caib.regweb3.scan.plugin.4.
 
 es.caib.regweb3.scan.plugin.4=org.fundaciobit.plugins.scanweb.digitalib.DigitalIBScanWebPlugin
-es.caib.regweb3.scan.plugin.4.plugins.scanweb.digitalib.url=http://digitalib.fundaciobit.org/digitalib/common/rest/apiscanwebsimple/v1/
-es.caib.regweb3.scan.plugin.4.plugins.scanweb.digitalib.username=username
-es.caib.regweb3.scan.plugin.4.plugins.scanweb.digitalib.password=password
+es.caib.regweb3.scan.plugin.4.pluginsib.scanweb.digitalib.url=http://digitalib.fundaciobit.org/digitalib/common/rest/apiscanwebsimple/v1/
+es.caib.regweb3.scan.plugin.4.pluginsib.scanweb.digitalib.username=username
+es.caib.regweb3.scan.plugin.4.pluginsib.scanweb.digitalib.password=password
 
 # Optional
+es.caib.regweb3.scan.plugin.4.pluginsib.scanweb.digitalib.metadata.functionary.username=functionary.username
+es.caib.regweb3.scan.plugin.4.pluginsib.scanweb.digitalib.metadata.functionary.fullname=functionary.fullname
+es.caib.regweb3.scan.plugin.4.pluginsib.scanweb.digitalib.metadata.functionary.administrationid=functionary.administrationid
+es.caib.regweb3.scan.plugin.4.pluginsib.scanweb.digitalib.metadata.document.language=document.language
 
 # Si no es defineix el profile, llavors se li mostrarà una pantalla a l'usuari amb tots els
 # Perfils disponibles per aquell usuari aplicació
