--- a/scanweb-tester/plugins.properties
+++ b/scanweb-tester/plugins.properties
@@ -81,6 +81,10 @@ org.fundaciobit.scanweb.tester.scanwebplugins.4.pluginsib.scanweb.digitalib.user
 org.fundaciobit.scanweb.tester.scanwebplugins.4.pluginsib.scanweb.digitalib.password=password
 
 #Opcional
+org.fundaciobit.scanweb.tester.scanwebplugins.4.pluginsib.scanweb.digitalib.metadata.functionary.username=functionary.username
+org.fundaciobit.scanweb.tester.scanwebplugins.4.pluginsib.scanweb.digitalib.metadata.functionary.fullname=functionary.fullname
+org.fundaciobit.scanweb.tester.scanwebplugins.4.pluginsib.scanweb.digitalib.metadata.functionary.administrationid=functionary.administrationid
+org.fundaciobit.scanweb.tester.scanwebplugins.4.pluginsib.scanweb.digitalib.metadata.document.language=document.language
 
 # Si no es defineix el profile, llavors se li mostrarà una pantalla a l'usuari amb tots els
 # Perfils disponibles per aquell usuari aplicació
