--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,9 @@
     <module>api</module>
     <module>dynamicwebtwain</module>
     <module>iecisa-scanweb-plugin</module>
+    <!--  OBSOLET !!!!
     <module>caib-scanweb-plugin</module>
+    -->
     <module>filescan-plugin</module>
     <module>digitalib-plugin</module>
     <module>scanweb-tester</module>
