DWT: Enviament metadades de document escanejat #15

--- a/dynamicwebtwain/src/main/resources/dynamicwebtwain.properties
+++ b/dynamicwebtwain/src/main/resources/dynamicwebtwain.properties
@@ -20,3 +20,47 @@ pitja=Pitja per Escanejar
 pujarServidor=Pujar al servidor
 rebut.1.fitxer=Rebut <b>{0}</b> fitxer
 rebut.n.fitxers=Rebuts <b>{0}</b> fitxers
+
+idioma=Idioma
+tipusdocumental=Tipus Documental
+
+TD01=Resolució (TD01)
+TD02=Acord (TD02)
+TD03=Contracte (TD03)
+TD04=Conveni (TD04)
+TD05=Declaració (TD05)
+TD06=Comunicació (TD06)
+TD07=Notificació (TD07)
+TD08=Publicació (TD08)
+TD09=Justificant de recepció (TD09)
+TD10=Acta (TD10)
+TD11=Certificat (TD11)
+TD12=Diligència (TD12)
+TD13=Informe (TD13)
+TD14=Sol.licitud (TD14)
+TD15=Denúncia (TD15)
+TD16=Al.legació (TD16)
+TD17=Recurs (TD17)
+TD18=Comunicació al ciutadà (TD18)
+TD19=Factura (TD19)
+TD20=Altres confiscats (TD20)
+TD51=Llei. (TD51)
+TD52=Moció (TD52)
+TD53=Instrucció. (TD53)
+TD54=Convocatòria. (TD54)
+TD55=Ordre del dia. (TD55)
+TD56=Informe de Ponència. (TD56)
+TD57=Dictamen de Comissió. (TD57)
+TD58=Iniciativa legislativa. (TD58)
+TD59=Pregunta. (TD59)
+TD60=Interpel·lació. (TD60)
+TD61=Resposta. (TD61)
+TD62=Proposició no de llei. (TD62)
+TD63=Esmena. (TD63)
+TD64=Proposta de resolució. (TD64)
+TD65=Compareixença. (TD65)
+TD66=Sol·licitud d´informació. (TD66)
+TD67=Escrit. (TD67)
+TD68=Iniciativa legislativa. (TD68)
+TD69=Petició. (TD69)
+TD99=Altres tipus de documents (TD99)
