Plugin DigitalIB: Llegir i transformar metadades https://github.com/GovernIB/pluginsib-scanweb/issues/17

--- a/digitalib-plugin/plugin.properties
+++ b/digitalib-plugin/plugin.properties
@@ -6,11 +6,19 @@ es.caib.regweb3.scan.plugin.4.pluginsib.scanweb.digitalib.url=http://digitalib.f
 es.caib.regweb3.scan.plugin.4.pluginsib.scanweb.digitalib.username=username
 es.caib.regweb3.scan.plugin.4.pluginsib.scanweb.digitalib.password=password
 
-# Optional
-es.caib.regweb3.scan.plugin.4.pluginsib.scanweb.digitalib.metadata.functionary.username=functionary.username
-es.caib.regweb3.scan.plugin.4.pluginsib.scanweb.digitalib.metadata.functionary.fullname=functionary.fullname
-es.caib.regweb3.scan.plugin.4.pluginsib.scanweb.digitalib.metadata.functionary.administrationid=functionary.administrationid
-es.caib.regweb3.scan.plugin.4.pluginsib.scanweb.digitalib.metadata.document.language=document.language
+# DEPRECATED
+# functionary.username, functionary.fullname, functionary.administrationid i document.language
+# han sigut deprecats. Ara s'han d'utilitzar les constants de MetadataConstants de PluginsIB-Core
+
+# MetadataConstants.FUNCTIONARY_USERNAME (opcional s'ha de passar a traves de les metadades de ScanWebConfig)
+# org.fundaciobit.scanweb.tester.scanwebplugins.4.pluginsib.scanweb.digitalib.functionary_username=anadal
+
+# MetadataConstants.FUNCTIONARY_FULLNAME (opcional s'ha de passar a traves de les metadades de ScanWebConfig)
+# org.fundaciobit.scanweb.tester.scanwebplugins.4.pluginsib.scanweb.digitalib.functionary_fullname=Antoni Nadal
+# MetadataConstants.FUNCTIONARY_ADMINISTRATIONID (opcional s'ha de passar a traves de les metadades de ScanWebConfig)
+# org.fundaciobit.scanweb.tester.scanwebplugins.4.pluginsib.scanweb.digitalib.functionary_administrationid=12345678Z
+
+
 
 # Si no es defineix el profile, llavors se li mostrarà una pantalla a l'usuari amb tots els
 # Perfils disponibles per aquell usuari aplicació
