--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,16 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.fundaciobit.pluginsib.scanweb</groupId>
   <artifactId>pluginsib-scanweb</artifactId>
-  <version>3.0.0</version>
+  <version>4.0.0</version>
   <packaging>pom</packaging>
   <name>PluginsIB - Scan Web</name>
   <properties>
     <documentcustody.api.version>4.0.0</documentcustody.api.version>
-    <scanweb.api.version>3.0.0</scanweb.api.version>
+    <scanweb.api.version>4.0.0</scanweb.api.version>
+	<!-- Propietats que afecten els plugins -->
+	<maven.compiler.release>1.7</maven.compiler.release>
+	<maven.compiler.target>1.7</maven.compiler.target>
+	<maven.compiler.source>1.7</maven.compiler.source>
   </properties>
   <modules>
     <module>api</module>
@@ -69,8 +73,8 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
           <configuration>
-            <source>1.6</source>
-            <target>1.6</target>
+            <source>1.7</source>
+            <target>1.7</target>
             <encoding>UTF-8</encoding>
           </configuration>
         </plugin>
@@ -85,7 +89,7 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-idea-plugin</artifactId>
           <configuration>
-            <jdkName>JDK1.6</jdkName>
+            <jdkName>JDK1.7</jdkName>
             <downloadSources>true</downloadSources>
             <downloadJavadocs>true</downloadJavadocs>
           </configuration>
