Adaptar tester a la nova API 4.0.0 #25

--- a/filescan-plugin/src/main/resources/filescanweb.properties
+++ b/filescan-plugin/src/main/resources/filescanweb.properties
@@ -5,3 +5,6 @@ acceptar=Acceptar
 
 final=Ha finalitzat l´escaneig correctament
 cancelat=El procés d´escaneig s´ha cancel·lat
+
+error.noseleccionatfitxer=No ha seleccionat cap fitxer. Torni a intentar-ho.
+error.tipusincorrecte=Ha seleccionat un fitxer de tipus {0} i es requereix que sigui de tipus {1}.
