--- a/iecisa-scanweb-plugin/src/main/resources/iecisascanweb.properties
+++ b/iecisa-scanweb-plugin/src/main/resources/iecisascanweb.properties
@@ -5,6 +5,7 @@ esperantservidor=Esperant a l´enviament de documents al servidor ...
 final=Continuar >>
 llistatescanejats=Llistat de Documents Escanejats
 noenviats=No s´ha enviat cap document escanejat al servidor. Vol sortir?
+noenviatcapdoc=No s´ha enviat cap document escanejat al servidor
 pitja=Pitja per Escanejar
 rebut.1.fitxer=Rebut <b>{0}</b> fitxer
 rebut.n.fitxers=Rebuts <b>{0}</b> fitxers
