--- a/digitalib-plugin/pom.xml
+++ b/digitalib-plugin/pom.xml
@@ -3,6 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>pluginsib-scanweb-digitalib</artifactId>
     <name>PluginsIB - Scan Web - DigitalIB</name>
+    <version>4.0.1</version>
     <parent>
         <groupId>org.fundaciobit.pluginsib.scanweb</groupId>
         <artifactId>pluginsib-scanweb</artifactId>
