No es visualitza correctament l'idioma durant digitalització massiva https://github.com/GovernIB/digitalib/issues/150

--- a/dynamicwebtwain-plugin/src/main/resources/dynamicwebtwain.properties
+++ b/dynamicwebtwain-plugin/src/main/resources/dynamicwebtwain.properties
@@ -6,8 +6,11 @@ dwt.resolucio=Resolució
 dwt.duplex=Duplex
 dwt.borra.actual=Esborra actual
 dwt.borra.tot=Esborra tot
-dwt.error.upload=S\\'ha produ\u00EFt un error, i no s\\'ha pogut pujar el document escanejat.
-
+dwt.error.upload=S\\'ha produ\u00EFt un error, i no s´ha pogut pujar el document escanejat.
+dwt.instruccions.1=Introdueix els documents dins l'escàner.
+dwt.instruccions.2=Configura els següent paràmetres de l´escaneig:
+dwt.instruccions.3=Escaneja
+dwt.visualitzacio=Visualització prèvia
 
 docspujats=Documents pujats
 esperantservidor=Esperant a l´enviament de documents al servidor ...
