Problemàtica d'Escaneig de Documents diferents a A4 (PART 2) https://github.com/GovernIB/digitalib/issues/170

--- a/dynamicwebtwain-plugin/plugin.properties
+++ b/dynamicwebtwain-plugin/plugin.properties
@@ -1,6 +1,7 @@
 
 
 # Class es.limit.pluginsib.scanweb.dynamicwebtwain.DynamicWebTwainScanWebPlugin
+# PropertyBase example = es.caib.regweb3.
 
 es.caib.regweb3.pluginsib.scanweb.dynamicwebtwain.debug=true
 es.caib.regweb3.pluginsib.scanweb.dynamicwebtwain.trial=false
@@ -11,6 +12,13 @@ es.caib.regweb3.pluginsib.scanweb.dynamicwebtwain.resourcespath=D:/dades/dades/C
 
 es.caib.regweb3.pluginsib.scanweb.dynamicwebtwain.hidetipusdocumental=false
 es.caib.regweb3.pluginsib.scanweb.dynamicwebtwain.hideidioma=false
+
+# Opcional
+# Si val 0: Funcionament sense definir Tamany de Pàgina. Valor per defecte
+# Si val 1 quan s'espitja "Escanejar" s'envia internament tamany de pàgina A4
+# Si val 2: Mostrar un despegable amb opcions A4, Letter i Legal i enviar
+# aquesta informacio a l'escaner
+es.caib.regweb3.pluginsib.scanweb.dynamicwebtwain.pagesizepolicy=2
 
 
 # Optional
