--- a/dynamicwebtwain-plugin/src/main/resources/dynamicwebtwain.properties
+++ b/dynamicwebtwain-plugin/src/main/resources/dynamicwebtwain.properties
@@ -1,5 +1,6 @@
 dwt.dispositiu=Dispositiu
 dwt.safata=Safata entrada document
+dwt.pageSize=Tamany de pàgina
 dwt.error.validacio=Hi ha errors en el formulari. Revisau-los abans de enviar.
 dwt.color=Color
 dwt.resolucio=Resolució
