--- a/scanweb-tester/plugins.properties
+++ b/scanweb-tester/plugins.properties
@@ -53,6 +53,14 @@ org.fundaciobit.scanweb.tester.scanwebplugins.3.pluginsib.scanweb.dynamicwebtwai
 # serveix per amagar la selecció de l'idioma del document.
 org.fundaciobit.scanweb.tester.scanwebplugins.3.pluginsib.scanweb.dynamicwebtwain.hideidioma=false
 
+# Opcional
+# Si val 0: Funcionament sense definir Tamany de Pàgina. Valor per defecte
+# Si val 1 quan s'espitja "Escanejar" s'envia internament tamany de pàgina A4
+# Si val 2: Mostrar un despegable amb opcions A4, Letter i Legal i enviar
+# aquesta informacio a l'escaner
+org.fundaciobit.scanweb.tester.scanwebplugins.3.pluginsib.scanweb.dynamicwebtwain.pagesizepolicy=2
+
+
 #---------------------------------------------------
 #----------------- 4 - DIGITALIB PLUGIN ------------
 #---------------------------------------------------
