Crear una copia del plugin digitalibmassiu emprant l'API de DigitalIB 2.0 #32

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,8 @@
 /scanweb-springboot-tester/.classpath
 /.project
 /.settings
+/digitalibmassive2-plugin/.project
+/digitalibmassive2-plugin/.settings
+/digitalibmassive2-plugin/target
+/digitalibmassive2-plugin/.classpath
+/scanweb-springboot-tester/plugins.properties
