--- a/scanweb-springboot-tester/pom.xml
+++ b/scanweb-springboot-tester/pom.xml
@@ -18,7 +18,8 @@
     </parent>
 
     <properties>
-        <springboot.version>2.7.6</springboot.version>
+        <!-- 2.7.6 -->
+        <springboot.version>2.7.18</springboot.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <!-- java version 11 -->
         <java.version>11</java.version>
@@ -29,6 +30,7 @@
 
         <maven.compiler.release>${java.version}</maven.compiler.release>
 
+        <resteasy.version>4.7.6.Final</resteasy.version>
     </properties>
 
     <dependencyManagement>
@@ -72,40 +74,25 @@
             <artifactId>tomcat-embed-jasper</artifactId>
             <scope>provided</scope>
         </dependency>
+
         <dependency>
             <groupId>jakarta.servlet.jsp.jstl</groupId>
             <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
-
         </dependency>
+
         <dependency>
             <groupId>org.glassfish.web</groupId>
             <artifactId>jakarta.servlet.jsp.jstl</artifactId>
-
         </dependency>
-        
-        
+
+
         <!-- Dependency for commons-ioutils -->
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>2.8.0</version>
         </dependency>
-        
-        
-        
-        <!-- API, java.xml.bind module -->
-        <dependency>
-            <groupId>jakarta.xml.bind</groupId>
-            <artifactId>jakarta.xml.bind-api</artifactId>
-        </dependency>
-        
-        <!-- Runtime, com.sun.xml.bind module -->
-        <dependency>
-            <groupId>org.glassfish.jaxb</groupId>
-            <artifactId>jaxb-runtime</artifactId>
-        </dependency>
-        
-        
+
 
         <!-- ====================================== -->
         <!-- ===========  API DE SCANWEB  ========= -->
@@ -133,42 +120,37 @@
 
             </exclusions>
         </dependency>
-        
-       <dependency>
+
+        <dependency>
             <groupId>org.fundaciobit.pluginsib.scanweb</groupId>
             <artifactId>pluginsib-scanweb-dynamicwebtwain</artifactId>
             <version>4.0.6</version>
         </dependency>
 
-        
+
         <dependency>
             <groupId>org.fundaciobit.pluginsib.scanweb</groupId>
             <artifactId>pluginsib-scanweb-iecisascanweb-plugin</artifactId>
             <version>4.0.0</version>
         </dependency>
-        
+
         <!--
-
-
-
-
-
         <dependency>
             <groupId>org.fundaciobit.pluginsib.scanweb</groupId>
             <artifactId>pluginsib-scanweb-digitalib</artifactId>
             <version>4.0.1</version>
         </dependency>
--->
+        
         <dependency>
             <groupId>org.fundaciobit.pluginsib.scanweb</groupId>
             <artifactId>pluginsib-scanweb-digitalibmassive</artifactId>
             <version>4.0.0</version>
         </dependency>
-        
+        -->
+
         <dependency>
             <groupId>org.fundaciobit.pluginsib.scanweb</groupId>
             <artifactId>pluginsib-scanweb-digitalibmassive2</artifactId>
-            
             <version>4.0.0</version>
         </dependency>
 
@@ -188,6 +170,7 @@
                     </execution>
                 </executions>
             </plugin>
+
 
         </plugins>
     </build>
