--- a/scanweb-tester/pom.xml
+++ b/scanweb-tester/pom.xml
@@ -1,41 +1,94 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>org.fundaciobit.pluginsib.scanweb</groupId>
-  <artifactId>pluginsib-scanweb-tester</artifactId>
-  <version>4.0.0</version>
-  <packaging>pom</packaging>
-  <name>PluginsIB - Scan Web - Tester</name>
-  <parent>
+    <modelVersion>4.0.0</modelVersion>
     <groupId>org.fundaciobit.pluginsib.scanweb</groupId>
-    <artifactId>pluginsib-scanweb</artifactId>
+    <artifactId>pluginsib-scanweb-tester</artifactId>
     <version>4.0.0</version>
-  </parent>
-  <modules>
-    <module>scanweb-ejb</module>
-    <module>scanweb-war</module>
-    <module>scanweb-ear</module>
-  </modules>
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.8.2</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
-  <build>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-resources-plugin</artifactId>
-          <configuration>
-            <encoding>UTF-8</encoding>
-          </configuration>
-        </plugin>
-      </plugins>
-    </pluginManagement>
-  </build>
-
+    <packaging>pom</packaging>
+    <name>PluginsIB - Scan Web - JBoss 7.2 Tester</name>
+    <parent>
+        <groupId>org.fundaciobit.pluginsib.scanweb</groupId>
+        <artifactId>pluginsib-scanweb</artifactId>
+        <version>4.0.0</version>
+    </parent>
+    <properties>
+        <!-- Versions de JBoss -->
+        <jboss-eap.version>7.2.6.GA</jboss-eap.version>
+        <jboss-javaee.version>1.0.1.Final-redhat-00003</jboss-javaee.version>
+        <!-- Propietats que afecten els plugins -->
+        <maven.compiler.release>11</maven.compiler.release>
+        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+    <modules>
+        <module>scanweb-war</module>
+        <module>scanweb-ear</module>
+    </modules>
+    <dependencyManagement>
+        <dependencies>
+            <!-- Definició de les versions de les llibreries, especificacions i eines disponibles dins JBoss -->
+            <!-- Dependències de JAVA EE 8 -->
+            <!-- A partir de Java 11 les llibreries JAXB ja no s'inclouen al JDK -->
+            <dependency>
+                <groupId>org.jboss.bom</groupId>
+                <artifactId>eap-runtime-artifacts</artifactId>
+                <version>${jboss-eap.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.jboss.bom</groupId>
+                <artifactId>jboss-eap-javaee8-with-tools</artifactId>
+                <version>${jboss-eap.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.jboss.spec</groupId>
+                <artifactId>jboss-javaee-8.0</artifactId>
+                <version>${jboss-javaee.version}</version>
+                <type>pom</type>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.8.2</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-resources-plugin</artifactId>
+                    <configuration>
+                        <encoding>UTF-8</encoding>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
+    <repositories>
+		<repository>
+			<id>github-governib-maven</id>
+			<name>GitHub GovernIB Maven Repository</name>
+			<url>https://governib.github.io/maven/maven/</url>
+		</repository>
+		<repository>
+			<id>jboss-releases</id>
+			<name>JBoss Releases Repository</name>
+			<url>https://maven.repository.redhat.com/ga/</url>
+			<releases>
+				<updatePolicy>never</updatePolicy>
+			</releases>
+			<snapshots>
+				<updatePolicy>never</updatePolicy>
+			</snapshots>
+		</repository>	
+	</repositories>
 </project>
